(frontend) Allow adding and editing timers
Fix #27

--- a/packages/frontend/src/custom.scss
+++ b/packages/frontend/src/custom.scss
@@ -20,4 +20,6 @@ $link-decoration: none;
 $link-hover-decoration: underline;
 $link-shade-percentage: 10%;
 
+$modal-content-bg: $gray-700;
+
 @import '~bootstrap/scss/bootstrap.scss';
