--- a/packages/frontend/src/pages/timers/edit-event-dialog.scss
+++ b/packages/frontend/src/pages/timers/edit-event-dialog.scss
@@ -7,3 +7,56 @@
 .inactive-time-mode {
   opacity: 0.7;
 }
+
+.edit-timer-dialog-footer {
+  position: relative;
+  overflow: hidden;
+}
+
+.edit-timer-dialog-buttons-wrapper {
+  position: relative;
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+
+  margin: 0;
+  & > * {
+    margin: $modal-footer-margin-between * .5;
+  }
+
+  transition: transform .25s ease-out;
+  &.hidden {
+    transform: translateY(-150%);
+  }
+}
+
+.edit-timer-dialog-buttons-spacer {
+  flex: 1;
+  text-align: center;
+}
+
+.edit-timer-confirm-delete-buttons-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  padding: $modal-inner-padding - $modal-footer-margin-between * .5;
+
+  margin: 0;
+  & > * {
+    margin: $modal-footer-margin-between * .5;
+  }
+
+  transition: transform .25s ease-out;
+  &.hidden {
+    transform: translateY(150%);
+  }
+}
