--- a/packages/frontend/src/custom.scss
+++ b/packages/frontend/src/custom.scss
@@ -3,6 +3,8 @@ $primary: #1b7ba4;
 $secondary: #ff4081;
 $gray: #424242;
 
+$cyan: #0babef;
+
 $gray-100: #f1f1f1;
 $gray-200: #d4d4d4;
 $gray-300: #b8b8b8;
@@ -11,11 +13,11 @@ $gray-500: #808080;
 $gray-600: #636363;
 $gray-700: #474747;
 $gray-800: #2a2a2a;
-$gray-900: #0e0e0e;
+$gray-900: #1c1c1c;
 
 $body-bg: $gray-800;
 $body-color: #ffffff;
-$link-color: $secondary;
+$link-color: #3cbcf2;
 $link-decoration: none;
 $link-hover-decoration: underline;
 $link-shade-percentage: 10%;
