(frontend) Enable generating bootstrap CSS classes for negative margins

--- a/packages/frontend/src/custom.scss
+++ b/packages/frontend/src/custom.scss
@@ -1,5 +1,7 @@
 @import '~bootstrap/scss/_functions.scss';
 
+$enable-negative-margins: true;
+
 /** Theming */
 $primary: #1b7ba4;
 $secondary: #ff4081;
