(frontend) Move theme customization into file separate from custom.scss
Prevents us from including bootstrap classes multiple times when importing the theme into component-specific scss filed

--- a/packages/frontend/src/pages/calendar/calendar.scss
+++ b/packages/frontend/src/pages/calendar/calendar.scss
@@ -1,4 +1,4 @@
-@import '../../custom.scss';
+@import '../../theme.scss';
 
 @mixin calendar-event-color-variant($name, $background) {
   &.#{$name} {
