(frontend) Display pings on the calendar page
Fix #43

--- a/packages/frontend/src/theme.scss
+++ b/packages/frontend/src/theme.scss
@@ -59,6 +59,7 @@ $input-bg: #313131;
 $input-disabled-bg: #232323; // right between gray 800 and 900
 
 $modal-content-bg: $gray-700;
+$btn-close-color: white;
 
 @import '~bootstrap/scss/variables.scss';
 @import '~bootstrap/scss/mixins';
