--- a/packages/frontend/src/app.css
+++ b/packages/frontend/src/app.css
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  max-height: 100%;
 }
 
 .main {
   flex-grow: 1;
+  overflow: hidden;
+  overflow-y: auto;
 }
