--- a/packages/frontend/src/pages/pings/send-pings.scss
+++ b/packages/frontend/src/pages/pings/send-pings.scss
@@ -53,7 +53,11 @@
         .ping-text {
           flex: 1;
           overflow: auto;
-          min-height: 200px;
+          min-height: 300px;
+        }
+
+        .placeholder {
+          cursor: pointer;
         }
       }
     }
